--- a/estilo/style.css
+++ b/estilo/style.css
@@ -13,3 +13,22 @@
         margin: auto;
         box-shadow: 3px 3px 5px black
     }
+    h1 {
+        font-size: 2em;
+        color: blueviolet;
+    }
+
+    h2 {
+        font-size: 1.5em;
+        color: blueviolet;
+    }
+
+    a {
+        text-decoration: none;
+        font-weight: bold;
+        color: blueviolet;
+    }
+    a:hover {
+        text-decoration: underline;
+        color: rgb(12, 12, 133);
+    }
